--- a/index.html
+++ b/index.html
@@ -588,21 +588,21 @@
 
         <!-- Contact Section -->
         <section id="contact">
-            <h2 class="section-header">./contact.sh</h2>
+            <h2 class="section-header">./contact.</h2>
             <div class="contact-grid">
-                <a href="mailto:your.email@example.com" class="contact-item">
+                <a href="mailto:villegasalrandolph@gmail.com.com" class="contact-item">
                     <div class="contact-icon">📧</div>
                     <div class="contact-info">
                         <h3>Email</h3>
-                        <p>your.email@example.com</p>
+                        <p>villegasalrandolph@gmail.com</p>
                     </div>
                 </a>
 
-                <a href="https://linkedin.com/in/yourprofile" target="_blank" class="contact-item">
+                <a href="https://linkedin.com/in/al-randolph-villegas/" target="_blank" class="contact-item">
                     <div class="contact-icon">💼</div>
                     <div class="contact-info">
                         <h3>LinkedIn</h3>
-                        <p>linkedin.com/in/yourprofile</p>
+                        <p>linkedin.com/al-randolph-villegas</p>
                     </div>
                 </a>
 
@@ -610,15 +610,15 @@
                     <div class="contact-icon">📱</div>
                     <div class="contact-info">
                         <h3>Phone</h3>
-                        <p>+1 (234) 567-890</p>
+                        <p>0945 - 623 - 5800</p>
                     </div>
                 </a>
 
-                <a href="https://facebook.com/yourprofile" target="_blank" class="contact-item">
+                <a href="https://www.facebook.com/alrandolphvillegass/" target="_blank" class="contact-item">
                     <div class="contact-icon">👤</div>
                     <div class="contact-info">
                         <h3>Facebook</h3>
-                        <p>facebook.com/yourprofile</p>
+                        <p>facebook.com/alrandolphvillegass</p>
                     </div>
                 </a>
             </div>
