Fixed email error

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
         <section id="contact">
             <h2 class="section-header">./contact.</h2>
             <div class="contact-grid">
-                <a href="mailto:villegasalrandolph@gmail.com.com" class="contact-item">
+                <a href="mailto:villegasalrandolph@gmail.com" class="contact-item">
                     <div class="contact-icon">📧</div>
                     <div class="contact-info">
                         <h3>Email</h3>
