Added work experience and certifications

--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
                         <li>Express.js</li>
                         <li>Django</li>
                         <li>FastAPI</li>
+                        <li>React</li>
                     </ul>
                 </div>
                 <div class="skill-category">
@@ -459,74 +460,108 @@
                 </div>
 
                 <div class="project-card">
-                    <h3>Task Management System</h3>
-                    <div class="project-description" data-full-text="Microservices-based task management system with real-time notifications and team collaboration features.">
-                        <p>Microservices-based task management system with real-time notifications and team collaboration features.</p>
+                    <h3>Password Manager</h3>
+                    <div class="project-description" data-full-text="Securely store and generate strong, unique passwords with ease. Simple, secure, and essential for modern online safety.">
+                        <p>
+                            Securely store and generate strong, unique passwords with ease. Simple, secure, and essential for modern online safety.
+                        </p>
                     </div>
                     <div class="project-links">
-                        <a href="https://demo.example.com" target="_blank" class="project-link">
+                        <a href="https://yale-v2rk.onrender.com/" target="_blank" class="project-link">
                             <span>🔗</span>
                             <span>Live Demo</span>
                         </a>
-                        <a href="https://github.com/yourusername/project" target="_blank" class="project-link">
+                        <a href="https://github.com/VILLEGASAL/yale" target="_blank" class="project-link">
                             <span>💻</span>
                             <span>GitHub</span>
                         </a>
                     </div>
                     <div class="tech-stack">
-                        <div class="tech-icon" data-tooltip="Python">🐍</div>
-                        <div class="tech-icon" data-tooltip="Django">🎸</div>
-                        <div class="tech-icon" data-tooltip="PostgreSQL">🐘</div>
-                        <div class="tech-icon" data-tooltip="Docker">🐳</div>
-                        <div class="tech-icon" data-tooltip="Celery">🌿</div>
+                        <div class="tech-icon" data-tooltip="Node.js">
+                            <img src="images/node-js.png" width="30">
+                        </div>
+
+                        <div class="tech-icon" data-tooltip="Express">
+                            <img src="images/express-js.png" width="30">
+                        </div>
+
+                        <div class="tech-icon" data-tooltip="PostgreSQL">
+                            <img src="images/postgre.png" width="30">
+                        </div>
                     </div>
                 </div>
 
                 <div class="project-card">
-                    <h3>Analytics Dashboard API</h3>
-                    <div class="project-description" data-full-text="High-performance API for data analytics dashboard with complex queries and data aggregation.">
-                        <p>High-performance API for data analytics dashboard with complex queries and data aggregation.</p>
+                    <h3>OJT Attendance Counter</h3>
+                    <div class="project-description" data-full-text="During my college internship the attendance are done manually through pen and paper. I realized the need for a better solution. This web app is an automated attendance counter. Simply input your time-in and time-out, and the system instantly calculates total hours worked and automatically subtracts them from your target hours. Track your progress effortlessly!">
+                        <p>
+                            During my college internship the attendance are 
+                            done manually through pen and paper. 
+                            I realized the need for a better solution. 
+                            This web app is an automated attendance counter. 
+                            Simply input your time-in and time-out, and the 
+                            system instantly calculates total hours worked 
+                            and automatically subtracts them from your target 
+                            hours. Track your progress effortlessly!
+                        </p>
                     </div>
                     <div class="project-links">
-                        <a href="https://demo.example.com" target="_blank" class="project-link">
+                        <a href="https://attendance-frontend-taupe.vercel.app" target="_blank" class="project-link">
                             <span>🔗</span>
                             <span>Live Demo</span>
                         </a>
-                        <a href="https://github.com/yourusername/project" target="_blank" class="project-link">
+                        <a href="https://github.com/VILLEGASAL/attendance-backend" target="_blank" class="project-link">
                             <span>💻</span>
                             <span>GitHub</span>
                         </a>
                     </div>
                     <div class="tech-stack">
-                        <div class="tech-icon" data-tooltip="Java">☕</div>
-                        <div class="tech-icon" data-tooltip="Spring Boot">🍃</div>
-                        <div class="tech-icon" data-tooltip="MySQL">🐬</div>
-                        <div class="tech-icon" data-tooltip="Apache Kafka">📨</div>
-                        <div class="tech-icon" data-tooltip="Redis">🔴</div>
+                        <div class="tech-icon" data-tooltip="React">
+                            <img src="images/react.png" width="30">
+                        </div>
+                        <div class="tech-icon" data-tooltip="Express">
+                            <img src="images/express-js.png" width="30">
+                        </div>
+                        <div class="tech-icon" data-tooltip="PostgreSQL">
+                            <img src="images/postgre.png" width="30">
+                        </div>
                     </div>
                 </div>
 
                 <div class="project-card">
-                    <h3>Authentication Service</h3>
-                    <div class="project-description" data-full-text="Centralized authentication and authorization service with OAuth2, JWT, and multi-factor authentication.">
-                        <p>Centralized authentication and authorization service with OAuth2, JWT, and multi-factor authentication.</p>
+                    <h3>URL SHORTENER</h3>
+                    <div class="project-description" data-full-text="Comming Soon...">
+                        <p>
+                            Comming Soon...
+                        </p>
                     </div>
                     <div class="project-links">
-                        <a href="https://demo.example.com" target="_blank" class="project-link">
+                        <a href="/" target="_blank" class="project-link">
                             <span>🔗</span>
                             <span>Live Demo</span>
                         </a>
-                        <a href="https://github.com/yourusername/project" target="_blank" class="project-link">
+                        <a href="/" target="_blank" class="project-link">
                             <span>💻</span>
                             <span>GitHub</span>
                         </a>
                     </div>
                     <div class="tech-stack">
-                        <div class="tech-icon" data-tooltip="Node.js">🟢</div>
-                        <div class="tech-icon" data-tooltip="Express.js">⚡</div>
-                        <div class="tech-icon" data-tooltip="PostgreSQL">🐘</div>
-                        <div class="tech-icon" data-tooltip="Redis">🔴</div>
-                        <div class="tech-icon" data-tooltip="OAuth2">🔑</div>
+                        <div class="tech-icon" data-tooltip="Python">
+                            <img src="images/python.png" width="30">
+                        </div>
+
+                        <div class="tech-icon" data-tooltip="FastAPI">
+                            <img src="images/Fastapi.png" width="30">
+                        </div>
+
+                        <div class="tech-icon" data-tooltip="React">
+                            <img src="images/react.png" width="30">
+                        </div>
+
+                        <div class="tech-icon" data-tooltip="PostgreSQL">
+                            <img src="images/postgre.png" width="30">
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -537,21 +572,83 @@
             <h2 class="section-header">grep experience work.log</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>Senior Backend Developer</h3>
-                    <div class="date">Company Name | Jan 2023 - Present</div>
-                    <p>Leading backend development team, architecting microservices, and optimizing database performance. Implemented CI/CD pipelines and reduced deployment time by 60%.</p>
+                    <h3>Backend Developer Intern</h3>
+                    <div class="date">CODEBILITY | June 2025 - Present</div>
+                    <ul>
+                        <li>
+                            Developed RESTful APIs using Javascript and Typescript with Express Backend Framework to support frontend functionalities.
+                        </li>
+
+                        <li>
+                            Developed and integrated AI-powered API endpoints that process image data to provide diagnostic insights.
+                        </li>
+
+                        <li>
+                            Implemented a robust error-handling system to ensure data integrity and reliable API responses. 
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="timeline-item">
-                    <h3>Backend Developer</h3>
-                    <div class="date">Tech Solutions Inc | Mar 2021 - Dec 2022</div>
-                    <p>Developed RESTful APIs, integrated third-party services, and maintained database systems. Collaborated with frontend teams to deliver full-stack solutions.</p>
+                    <h3>I.T Technician Intern</h3>
+                    <div class="date">Leyte Provincial Capitol | February 2025 - May 2025 (270 Hours)</div>
+                    <ul>
+                        <li>
+                            Implemented and configured scalable LAN/WAN computer networks for multiple municipal and school facilities throughout Leyte Province, improving operational stability and access.
+                        </li>
+
+                        <li>
+                            Diagnosed and Resolved complex network and software malfunctions for all end-users, ensuring maximum system uptime and operational continuity.
+                        </li>
+
+                        <li>
+                            Deployed servers that provides services for municipalities such as Electronic Business Processing and Liscencing System and Document Tracking System.
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="timeline-item">
-                    <h3>Junior Backend Developer</h3>
-                    <div class="date">StartUp Co | Jun 2019 - Feb 2021</div>
-                    <p>Built and maintained server-side applications, wrote comprehensive unit tests, and participated in code reviews. Gained experience with various backend technologies.</p>
+                    <h3>Computer Systems Servicing Mentor Intern</h3>
+                    <div class="date">Future Proof Learning Center Tacloban City | July 2025 - July 2025 (80 Hours)</div>
+                    <ul>
+                        <li>
+                            Assisted instructors in delivering comprehensive lessons on computer hardware, software, networking, and troubleshooting to 25 students.
+                        </li>
+
+                        <li>
+                            Answered student inquiries regarding course content, assignments, and practical challenges, fostering a supportive and interactive learning atmosphere.
+                        </li>
+
+                        <li>
+                            Implemented basic network setups for lab activities, including IP addressing, cabling, and connectivity testing.
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="timeline-item">
+                    <h3>Cashier</h3>
+                    <div class="date">Great Uptown Steel Corporation | November 2021 - August 2022</div>
+                    <ul>
+                        <li>
+                            Prepare daily sales and expense reports.
+                        </li>
+
+                        <li>
+                            Do payroll.
+                        </li>
+
+                        <li>
+                            Answer customer's query.
+                        </li>
+
+                        <li>
+                            Issue official receipts. 
+                        </li>
+
+                        <li>
+                            Responsible for handling and managing cash on hand.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -561,21 +658,23 @@
             <h2 class="section-header">ls certifications/</h2>
             <div class="cert-grid">
                 <div class="cert-card">
-                    <h3>AWS Certified Solutions Architect</h3>
-                    <div class="issuer">Amazon Web Services</div>
-                    <div class="date">Valid: 2024 - 2027</div>
+                    <h3>Computer Systems Servicing NC II</h3>
+                    <div class="issuer">TESDA</div>
+                    <a href="/" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
+                    <div class="date">Valid: 2025 - 2030</div>
                 </div>
 
                 <div class="cert-card">
-                    <h3>Oracle Certified Professional</h3>
-                    <div class="issuer">Oracle Corporation</div>
-                    <div class="date">Issued: March 2023</div>
+                    <h3>Creative Web Design Certificate of Training</h3>
+                    <div class="issuer">TESDA</div>
+                    <a href="/" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
+                    <div class="date">Valid: No Expiration</div>
                 </div>
 
                 <div class="cert-card">
-                    <h3>MongoDB Certified Developer</h3>
-                    <div class="issuer">MongoDB Inc</div>
-                    <div class="date">Issued: January 2023</div>
+                    <h3>Fullstack Javascript Web Development Bootcamp</h3>
+                    <div class="issuer">Udemy</div>
+                    <div class="date">Issued: February 2023</div>
                 </div>
 
                 <div class="cert-card">
@@ -626,8 +725,8 @@
     </div>
 
     <footer>
-        <p>© 2025 Backend Developer Portfolio | Built with ❤️ and code</p>
-        <p style="margin-top: 0.5rem; font-size: 0.85rem;">user@portfolio:~$ █</p>
+        <p>© 2025 Al Randolph Villegas | Built with ❤️ and code</p>
+        <p style="margin-top: 0.5rem; font-size: 0.85rem;">alvillegas@portfolio:~$ █</p>
     </footer>
 
     <script src="main.js"></script>
