--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
                 <a href="#about">about</a>
 
-                <a href="#skills">skills</a>
-
-                <a href="#projects">projects</a>
-
                 <a href="#work">experience</a>
 
                 <a href="#certifications">certifications</a>
+
+                <a href="#skills">skills</a>
+
+                <a href="#projects">projects</a>
 
                 <a href="#contact">contact</a>
 
@@ -373,6 +373,119 @@
             </div>
         </section>
 
+                <!-- Work Experience Section -->
+        <section id="work">
+            <h2 class="section-header">work_experience/</h2>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>Backend Developer Intern</h3>
+                    <div class="date">CODEBILITY | June 2025 - Present</div>
+                    <ul>
+                        <li>
+                            Developed RESTful APIs using Javascript and Typescript with Express Backend Framework to support frontend functionalities.
+                        </li>
+
+                        <li>
+                            Developed and integrated AI-powered API endpoints that process image data to provide diagnostic insights.
+                        </li>
+
+                        <li>
+                            Implemented a robust error-handling system to ensure data integrity and reliable API responses. 
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="timeline-item">
+                    <h3>I.T Technician Intern</h3>
+                    <div class="date">Leyte Provincial Capitol | February 2025 - May 2025 (270 Hours)</div>
+                    <ul>
+                        <li>
+                            Implemented and configured scalable LAN/WAN computer networks for multiple municipal and school facilities throughout Leyte Province, improving operational stability and access.
+                        </li>
+
+                        <li>
+                            Diagnosed and Resolved complex network and software malfunctions for all end-users, ensuring maximum system uptime and operational continuity.
+                        </li>
+
+                        <li>
+                            Deployed servers that provides services for municipalities such as Electronic Business Processing and Liscencing System and Document Tracking System.
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="timeline-item">
+                    <h3>Computer Systems Servicing Mentor Intern</h3>
+                    <div class="date">Future Proof Learning Center Tacloban City | July 2025 - July 2025 (80 Hours)</div>
+                    <ul>
+                        <li>
+                            Assisted instructors in delivering comprehensive lessons on computer hardware, software, networking, and troubleshooting to 25 students.
+                        </li>
+
+                        <li>
+                            Answered student inquiries regarding course content, assignments, and practical challenges, fostering a supportive and interactive learning atmosphere.
+                        </li>
+
+                        <li>
+                            Implemented basic network setups for lab activities, including IP addressing, cabling, and connectivity testing.
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="timeline-item">
+                    <h3>Cashier</h3>
+                    <div class="date">Great Uptown Steel Corporation | November 2021 - August 2022</div>
+                    <ul>
+                        <li>
+                            Prepare daily sales and expense reports.
+                        </li>
+
+                        <li>
+                            Do payroll.
+                        </li>
+
+                        <li>
+                            Answer customer's query.
+                        </li>
+
+                        <li>
+                            Issue official receipts. 
+                        </li>
+
+                        <li>
+                            Responsible for handling and managing cash on hand.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Certifications Section -->
+        <section id="certifications">
+            <h2 class="section-header">certifications/</h2>
+            <div class="cert-grid">
+                <div class="cert-card">
+                    <h3>Computer Systems Servicing NC II</h3>
+                    <div class="issuer">TESDA</div>
+                    <a href="https://drive.google.com/file/d/1dwfI5JhOuiBKXk40WlIPMkfl6T_c-4Pl/view?usp=sharing" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
+                    <div class="date">Valid: 2025 - 2030</div>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Fullstack Javascript Web Development Bootcamp</h3>
+                    <div class="issuer">Udemy</div>
+                    <a href="https://www.udemy.com/certificate/UC-82fa5342-8d3a-4043-bbd6-728db49e0b49/" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
+                    <div class="date">Issued: February 2023</div>
+                </div>
+
+                <div class="cert-card">
+                    <h3>Creative Web Design Certificate of Training</h3>
+                    <div class="issuer">TESDA</div>
+                    <a href="https://drive.google.com/file/d/1UEiUY75HvcKD7bVAqyG_RYJO1GbXvqh6/view?usp=sharing" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
+                    <div class="date">Valid: No Expiration</div>
+                </div>
+            </div>
+        </section>
+
         <!-- Skills Section -->
         <section id="skills">
             <h2 class="section-header">skills/</h2>
@@ -567,124 +680,6 @@
             </div>
         </section>
 
-        <!-- Work Experience Section -->
-        <section id="work">
-            <h2 class="section-header">grep experience work.log</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <h3>Backend Developer Intern</h3>
-                    <div class="date">CODEBILITY | June 2025 - Present</div>
-                    <ul>
-                        <li>
-                            Developed RESTful APIs using Javascript and Typescript with Express Backend Framework to support frontend functionalities.
-                        </li>
-
-                        <li>
-                            Developed and integrated AI-powered API endpoints that process image data to provide diagnostic insights.
-                        </li>
-
-                        <li>
-                            Implemented a robust error-handling system to ensure data integrity and reliable API responses. 
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="timeline-item">
-                    <h3>I.T Technician Intern</h3>
-                    <div class="date">Leyte Provincial Capitol | February 2025 - May 2025 (270 Hours)</div>
-                    <ul>
-                        <li>
-                            Implemented and configured scalable LAN/WAN computer networks for multiple municipal and school facilities throughout Leyte Province, improving operational stability and access.
-                        </li>
-
-                        <li>
-                            Diagnosed and Resolved complex network and software malfunctions for all end-users, ensuring maximum system uptime and operational continuity.
-                        </li>
-
-                        <li>
-                            Deployed servers that provides services for municipalities such as Electronic Business Processing and Liscencing System and Document Tracking System.
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="timeline-item">
-                    <h3>Computer Systems Servicing Mentor Intern</h3>
-                    <div class="date">Future Proof Learning Center Tacloban City | July 2025 - July 2025 (80 Hours)</div>
-                    <ul>
-                        <li>
-                            Assisted instructors in delivering comprehensive lessons on computer hardware, software, networking, and troubleshooting to 25 students.
-                        </li>
-
-                        <li>
-                            Answered student inquiries regarding course content, assignments, and practical challenges, fostering a supportive and interactive learning atmosphere.
-                        </li>
-
-                        <li>
-                            Implemented basic network setups for lab activities, including IP addressing, cabling, and connectivity testing.
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="timeline-item">
-                    <h3>Cashier</h3>
-                    <div class="date">Great Uptown Steel Corporation | November 2021 - August 2022</div>
-                    <ul>
-                        <li>
-                            Prepare daily sales and expense reports.
-                        </li>
-
-                        <li>
-                            Do payroll.
-                        </li>
-
-                        <li>
-                            Answer customer's query.
-                        </li>
-
-                        <li>
-                            Issue official receipts. 
-                        </li>
-
-                        <li>
-                            Responsible for handling and managing cash on hand.
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <!-- Certifications Section -->
-        <section id="certifications">
-            <h2 class="section-header">ls certifications/</h2>
-            <div class="cert-grid">
-                <div class="cert-card">
-                    <h3>Computer Systems Servicing NC II</h3>
-                    <div class="issuer">TESDA</div>
-                    <a href="/" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
-                    <div class="date">Valid: 2025 - 2030</div>
-                </div>
-
-                <div class="cert-card">
-                    <h3>Creative Web Design Certificate of Training</h3>
-                    <div class="issuer">TESDA</div>
-                    <a href="/" style="color: aqua; font-size: 0.8rem;">View Certificate</a>
-                    <div class="date">Valid: No Expiration</div>
-                </div>
-
-                <div class="cert-card">
-                    <h3>Fullstack Javascript Web Development Bootcamp</h3>
-                    <div class="issuer">Udemy</div>
-                    <div class="date">Issued: February 2023</div>
-                </div>
-
-                <div class="cert-card">
-                    <h3>Docker Certified Associate</h3>
-                    <div class="issuer">Docker Inc</div>
-                    <div class="date">Issued: November 2022</div>
-                </div>
-            </div>
-        </section>
-
         <!-- Contact Section -->
         <section id="contact">
             <h2 class="section-header">./contact.</h2>
@@ -718,6 +713,16 @@
                     <div class="contact-info">
                         <h3>Facebook</h3>
                         <p>facebook.com/alrandolphvillegass</p>
+                    </div>
+                </a>
+
+                <a href="https://github.com/VILLEGASAL" target="_blank" class="contact-item">
+                    <div class="contact-icon">
+                        <img src="images/github.png" width="50" alt="github-image.png">
+                    </div>
+                    <div class="contact-info">
+                        <h3>Github</h3>
+                        <p>github.com/VILLEGASAL</p>
                     </div>
                 </a>
             </div>
